--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "webpack-merge": "^4.1.2"
   },
   "dependencies": {
+    "react-router-dom": "^4.2.2",
     "react": "^16.4.0",
     "react-dom": "^16.4.0"
   }
