--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "eslint-loader": "^2.0.0",
     "eslint-plugin-react": "^7.9.1",
     "file-loader": "^1.1.11",
+    "firebase": "^5.0.4",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.9.0",
+    "re-base": "^3.2.3",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
     "webpack": "^4.11.0",
